src/main/java/com/example/wth_app/error/UnauthorizedException.java
package com.example.wth_app.error;

public class UnauthorizedException extends RuntimeException {
    public UnauthorizedException(String message) {
        super(message);
    }
}
